@@ -1,3 +1,6 @@
+Thu, 06 Jul 2006 20:55:37 +0200 <thp@perli.net>
+	* Multiple selection support for download progress list
+
 Thu, 22 Jun 2006 23:37:50 +0200 <thp@perli.net>
 	* Added support for multiple-selection in available podcasts 
 	  tab and starting simultaneous downloads at once
